--- a/final_assignment/final_assignment.Rmd
+++ b/final_assignment/final_assignment.Rmd
@@ -1387,7 +1387,6 @@ boot_dist_usa <- ask_a_manager_2021_cleaned%>%
 boot_dist_usa
 
 
-percentile_ci_usa
 
 percentile_ci_usa2 <- get_ci(boot_dist_usa , level = 0.95, type ="percentile") 
 #for visualisation
@@ -1738,6 +1737,31 @@ ask_a_manager_2021_cleaned_gender_country %>%
             q3salary=quantile(salary_usd, prob=.75, na.rm=TRUE),
             minsalary=min(salary_usd, na.rm=T),
             maxsalary=max(salary_usd, na.rm=T)) 
+
+```
+
+```{r}
+library(usmap)
+library(ggplot2)
+
+ask_a_manager_states_clean <- ask_a_manager_2021_cleaned %>% 
+  filter(country == "United States") %>% 
+  rowwise() %>% 
+  mutate(state = str_split(state, ",")) %>% 
+  mutate(state = as.character(state[1]))
+
+usmap_df <- ask_a_manager_states_clean %>% 
+  group_by(state) %>% 
+  summarise(median_salary = median(salary_usd, na.rm = TRUE)) 
+
+plot_usmap(regions = "state", data = usmap_df, values = "median_salary") + 
+  labs(title = "U.S. States",
+       subtitle = "Salary US") + 
+  scale_fill_continuous(low = "blue", 
+                        high = "red", 
+                        name = "salary_usd", 
+                        label = scales::comma)+
+  theme(panel.background=element_blank())
 
 ```
 
