--- a/final_assignment/final_assignment.Rmd
+++ b/final_assignment/final_assignment.Rmd
@@ -1000,7 +1000,7 @@ ggplot(single_race_data, aes(reorder(race, num_resp_race)))+
 
 ```
 
-## Number of Responses by Gender
+### Number of Responses by Gender
 
 ```{r}
 ask_a_manager_2021_cleaned%>%
@@ -1052,16 +1052,15 @@ ask_a_manager_2021_cleaned%>%
   mutate(num_resp_country = n())%>%
   ungroup()%>%
   filter(!is.na(gender), num_resp_country>50)%>%
-  group_by(gender)%>%
-  summarise(country,num_resp_gender = n())%>%
-  mutate(prc = num_resp_gender/sum(num_resp_gender)*100)
-  ggplot(aes(x = num_resp_gender, y = reorder(gender, num_resp_gender)))+
+  group_by(country,gender)%>%
+  summarise(num_resp_gender = n())%>%
+  mutate(prc = num_resp_gender/sum(num_resp_gender)*100)%>%
+  ggplot(aes(x = prc, y = reorder(gender, prc)))+
   geom_col(fill = "skyblue")+
   theme_bw()+
   labs(title = "% of Responses By Gender",
-       x = "number of responses")+
+       x = "%")+
   theme(axis.title.y = element_blank())+
-  # geom_text(aes(label = sprintf("%.2f%%", num_resp_gender/sum(num_resp_gender)*100)), hjust = 0.5)+
   facet_wrap(~country)
 
 
