--- a/final_assignment/final_assignment.Rmd
+++ b/final_assignment/final_assignment.Rmd
@@ -1246,13 +1246,13 @@ We would like to see the popularity of the Computing or Tech industry in each co
 library(infer)
 #we want to work on the top 5 countries with the most data points..
 
-country_codes <- c("USA", "GBR", "AUS", "CAN", "DEU")
+top5_country <- c("USA", "GBR", "AUS", "CAN", "DEU")
 
 
 #Industry exploration: gives salary by the selected countries and all industry
 salary_exploration <- ask_a_manager_2021_cleaned %>% 
   filter(!is.na(salary_usd), !is.na(industry_cleaned), !is.na(gender)) %>%    
-  filter(country_code %in% country_codes) %>% 
+  filter(country_code %in% top5_country) %>% 
   select(country, country_code, salary_usd, industry_cleaned, gender) %>% 
   group_by(country, industry_cleaned, gender)%>%
   summarise(num_resp = n())%>%
@@ -1290,10 +1290,13 @@ In every single country on our country list, tech is the most popular industry. 
 
 Boxplot of Computing or Tech salaries across USA, Australia, Germany, UK, Canada
 ```{r}
-tech_salary_boxplot_data <- salary_exploration %>%
-  filter(industry =="Computing or Tech")
+tech_salary_boxplot_data <- ask_a_manager_2021_cleaned %>%
+  filter(industry_cleaned =="Computing or Tech")%>%
+  filter(country_code %in% top5_country)%>%
+  group_by(country)%>%
+  mutate(max_salary = max(salary_usd))
 
-tech_salary_boxplot <- ggplot(data = tech_salary_boxplot_data, aes(x = salary_usd, y=fct_reorder(country, salary_usd))) +
+tech_salary_boxplot <- ggplot(tech_salary_boxplot_data, aes(x = salary_usd, y = reorder(country, salary_usd))) +
   geom_boxplot() +
   labs( title= " Tech salaries across USA, Australia, Germany, UK, Canada",
         x="Salary (USD)",
@@ -1307,8 +1310,8 @@ According to the box plot, USA has the highest mean Computing and Tech Salary. U
 
 mean_median_tech_salary_by_country <- ask_a_manager_2021_cleaned %>% 
   filter(!is.na(salary_usd)) %>% 
-  filter(country_code  %in% country_codes ) %>% 
-  filter(industry == "Computing or Tech") %>% 
+  filter(country_code  %in% top5_country ) %>% 
+  filter(industry_cleaned == "Computing or Tech") %>% 
   group_by(country_code) %>% 
   summarise(mean_tech_salary = mean(salary_usd),
             median_tech_salary = median(salary_usd)) %>% 
@@ -1322,7 +1325,7 @@ mean_median_tech_salary_by_country
 USA has more mean and median tech salary, followed by Australia and Germany and UK.
 
 ```{r}
-set.seed(123)
+
 
 
 #####CI for USA Mean Salary
@@ -1489,19 +1492,88 @@ merged_table <- rbind(merged_table, percentile_ci_can)
 merged_table
 ```
 
+### Confidence interval of Median Salaries
+
+```{r}
+
+set.seed(123)
+
+percentile_ci_median_tech <- data.frame(matrix(ncol = 4,nrow = 0))
+
+colnames(percentile_ci_median_tech)<-c("country","lower_ci", "upper_ci","median")
+
+for(i in top5_country)
+{
+  #confidence interval bootstrap
+median_tech_country <- ask_a_manager_2021_cleaned%>% 
+  filter(country_code == i) %>%   
+  filter(!is.na(salary_usd)) %>% 
+  filter(industry_cleaned == "Computing or Tech") %>%
+  group_by(country)%>%
+  summarise(median = median(salary_usd))
+
+boot_dist <- ask_a_manager_2021_cleaned%>% 
+  filter(country_code == i) %>%   
+  filter(!is.na(salary_usd)) %>% 
+  filter(industry_cleaned == "Computing or Tech") %>% 
+  specify(response = salary_usd) %>%
+  # Generate bootstrap samples
+  generate(reps = 1000, type = "bootstrap") %>%
+  # Calculate mean of each bootstrap sample
+  calculate(stat = "median")
+
+#creating the CI table with country code
+percentile_ci <- get_ci(boot_dist , level = 0.95, type ="percentile")
+
+percentile_ci_median_tech <- percentile_ci_median_tech%>%
+  mutate(country = i,
+         lower_ci = percentile_ci$lower_ci,
+         upper_ci = percentile_ci$upper_ci,
+         median = median_tech_country$median)
+
+#visualisation of the resulting bootstrap distribution and the CIs
+fig<-  visualize(boot_dist) +
+  shade_ci(endpoints = percentile_ci, fill="khaki")+
+  labs(title = sprintf("Simulation of Bootstrap Distribution for Median %s",i))
+
+plot(fig)
+}
+
+```
+
+
+### Confidence interval of the Mean Salaries
+```{r}
+
+mean_conf_country_tech <- ask_a_manager_2021_cleaned%>%
+  filter(industry_cleaned == "Computing or Tech",
+         !is.na(salary_usd))%>%
+  filter(country_code %in% top5_country)%>%
+  group_by(country)%>%
+  summarise(mean_salary = mean(salary_usd, na.rm=TRUE),
+            n_salary = n(),
+            sd_salary = sd(salary_usd, na.rm = TRUE),
+            se_salary = sd_salary/sqrt(n_salary),
+            t_critical = qt(0.975, n_salary - 1),
+            salary_lower = mean_salary - t_critical*se_salary,
+            salary_upper = mean_salary + t_critical*se_salary)
+
+```
+
+
 
 ```{r}
 
 #Graph of CIs:
- graph <- ggplot(merged_table, aes(colour = country_code)) +
-  geom_errorbar(aes(xmin = lower_ci, xmax = upper_ci, y= reorder(country_code, mean)), width = 0.1, size = 1.5)  +
-  geom_point(aes(x=mean, y=reorder(country_code, mean)), size = 3 ) +
+ graph <- ggplot(mean_conf_country_tech, aes(colour = country)) +
+  geom_errorbar(aes(xmin = salary_lower, xmax = salary_upper, y= reorder(country, mean_salary)), width = 0.1, size = 1.5)  +
+  geom_point(aes(x=mean_salary, y=reorder(country, mean_salary)), size = 3 ) +
   labs(title="Confidence Intervals of Mean Salary by Country in Computing and Tech Industry",
        subtitle="95% confidence intervals",
        x="Mean Salary (USD)",
        y =" ") +
   theme_bw() +
-    geom_text(aes(label = round(mean,0), round(mean,0), y=country_code), size = 3, color="black", hjust = 0.5, vjust = 2, nudge_x = 0.00, nudge_y = 0.00)
+    geom_text(aes(label =format(round(mean_salary,0), big.mark = ","), x = round(mean_salary,0), y=country), size = 3, color="black", hjust = 0.5, vjust = 2, nudge_x = 0.00, nudge_y = 0.00)
 
 graph
 
